# Veritas-

./: .gitignore  CONTEXT.md  LICENSE  README.md  config.example.py  paper_audit.py  pyproject.toml  requirements.txt
.trellis/: .template-hashes.json
Test_paper2/.2026-040896_稿件全文C.paper_audit_resume/: reference_online_cache.json  resume_manifest.jsonl  stage1_extract.json
Test_paper2/.Test_paper2.paper_audit_resume/: resume_manifest.jsonl  stage1_extract.json
Test_paper2/Test_paper2/: test_paper2_audit.audit.json  test_paper2_audit.audit.md  test_paper2_audit.failed.html  test_paper2_docx_direct.audit.html  test_paper2_docx_direct.audit.md  (+2 more)
docs/: architecture-review-2026-05-28.html  project-analysis-for-plan-grill.md  refactor-plan-third-party-first.md
tests/: test_core.py
veritas/: __init__.py  adapters.py  artifacts.py  cli.py  cross_file_consistency.py  desktop_gui.py  evaluation.py  evidence_chain.py  evidence_rendering.py  external_timeout.py  failed_diagnostics.py  file_utils.py  html_utils.py  image_audit_builder.py  image_collection.py  image_detector_provider.py  image_local_analysis.py  image_payloads.py  image_reporting.py  image_results.py  image_semantic_provider.py  legacy.py  local_analysis.py  mineru_text.py  models.py  paper_identity.py  pattern_updates.py  preflight.py  preflight_types.py  production_adapters.py  project_files.py  reference_audit.py  reference_online.py  reference_parsing.py  renderers.py  report_action_context.py  report_action_service.py  report_checks.py  report_html_fragments.py  report_html_sections.py  (+16 more)
(+100 files in other folders)
